continued working on paragraph overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,6 +65,7 @@ body {
 
 .candidate-div {
     max-width: 100%;
+    width: fit-content;
     font-size: 2rem;
     background-color: dodgerblue;
     margin: 2rem auto;
@@ -101,6 +102,7 @@ body {
 
 .input-div {
     max-width: 100%;
+    width: fit-content;
     font-size: 1.75rem;
     overflow: hidden;
     justify-content: left;
@@ -109,6 +111,8 @@ body {
 }
 
 .input-group {
+    max-width: 100%;
+    width: fit-content;
     display: flex;
     margin: 1.75rem 0;
     justify-content: left;
@@ -119,6 +123,7 @@ body {
 
 .input-prompt {
     max-width: 100%;
+    width: fit-content;
     padding: 0 1rem;
     justify-content: left;
 }
@@ -136,7 +141,7 @@ body {
 .paragraph-container {
     white-space: normal;
     text-overflow: ellipsis;
-    max-width: 100%;
+    max-width: 95%;
     word-wrap: break-word;
     justify-content: left;
     text-align: left;
@@ -256,7 +261,7 @@ body {
 
 .info-div {
     text-align: left;  
-    max-width: 100%;
+    max-width: 75%;
     font-size: 1.75rem;
 }
 
